Fix for horizontal scroll on mobile

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -9,7 +9,6 @@ video {
 
 html {
   min-height: 100%;
-  overflow-x: hidden;
 }
 
 body {
